--- a/Labfiles/01.md
+++ b/Labfiles/01.md
@@ -636,3 +636,39 @@ In this task, you will associate an Application Gateway with Web Application Fir
 #### Task summary 
 
 In this task, you assigned a public IP address to the UbuntuWAF VM and verified that the SmartHotel application is now working in Azure.
+
+
+### Task 8:  Migrating VMware VMs to Azure (Read only)
+
+Azure Migrate is a free tool from Microsoft that allows VMware administrators to replicate their VMs from on-prem to Azure. It’s an extremely powerful tool that even allows for pre-migration tests to run.
+
+Azure Migrate has two migrations options:
+
+- Migration with an agent for replication, requires an agent to be installed on each VM that is to be migrated.
+- Migration using agentless replication, requires an agentless format which requires no agent.
+
+**Discovery/Assessment**:
+
+ Discover up to 10,000 VMware VMs with a single Azure Migrate appliance for VMware. The appliance supports adding multiple vCenter Servers. You can add up to 10 vCenter Servers per appliance.
+ 
+**Migration**:
+
+* **Agentless migration**: 
+
+- Agentless migration uses the Azure Migrate appliance. You can deploy the appliance as a VMware VM using an OVA template, imported into vCenter Server, or using a PowerShell script.
+
+- you can simultaneously replicate a maximum of 500 VMs across multiple vCenter Servers (discovered from one appliance) using a scale-out appliance.
+
+- If you are interested in learning more about the Agentless migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware)
+
+* **Agent-based migration**: 
+
+- Agent-based migration does not use the Azure Migrate appliance. If you've set up an appliance for assessment, you can leave it in place, or remove it if you're done with assessment.
+
+- you can scale out the replication appliance to replicate large numbers of VMs.
+
+- If you are interested in learning more about the Agent-based migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware-agent)
+
+In the portal, you can select up to 10 machines at once for replication. To replicate more machines, add in batches of 10.
+
+
