--- a/Labfiles/01.md
+++ b/Labfiles/01.md
@@ -651,9 +651,8 @@ Azure Migrate has two migrations options:
 
  Discover up to 10,000 VMware VMs with a single Azure Migrate appliance for VMware. The appliance supports adding multiple vCenter Servers. You can add up to 10 vCenter Servers per appliance.
  
-**Migration**:
 
-* **Agentless migration**: 
+#### Agentless migration: 
 
 - Agentless migration uses the Azure Migrate appliance. You can deploy the appliance as a VMware VM using an OVA template, imported into vCenter Server, or using a PowerShell script.
 
@@ -661,7 +660,7 @@ Azure Migrate has two migrations options:
 
 - If you are interested in learning more about the Agentless migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware)
 
-* **Agent-based migration**: 
+#### Agent-based migration: 
 
 - Agent-based migration does not use the Azure Migrate appliance. If you've set up an appliance for assessment, you can leave it in place, or remove it if you're done with assessment.
 
