--- a/Labfiles/01.md
+++ b/Labfiles/01.md
@@ -638,6 +638,44 @@ In this task, you will associate an Application Gateway with Web Application Fir
 In this task, you assigned a public IP address to the UbuntuWAF VM and verified that the SmartHotel application is now working in Azure.
 
 
+### Task 7: Pointers around Azure Networking and Azure Network Security (Read only)
+
+Design and implementation of Azure networking is one of the most critical steps in migrating your infrastructure as a service (IaaS) and platform as a service (PaaS) implementations in Azure.
+
+Azure provides virtual networks with these capabilities:
+
+- Azure resources communicate privately, directly, and securely with each other over virtual networks.
+
+- You can configure endpoint connections on virtual networks for virtual machines (VMs) and services that require internet communication.
+
+- You can implement multiple virtual networks within each Azure subscription and Azure region.
+
+- Virtual networks can connect to each other by using virtual network peering. Connected virtual networks can be in the same region or different regions; resources in one virtual network can connect to resources in other virtual networks.
+
+#### Best Practises:
+
+- Assign an address space that isn't larger than a CIDR range of /16 for each virtual network. Virtual networks allow for the use of 65,536 IP addresses. Assigning a smaller prefix than /16, such as a /15, which has 131,072 addresses, will result in the excess IP addresses becoming unusable elsewhere. It's important not to waste IP addresses, even if they're in the private ranges defined by RFC 1918.
+
+- The hub is an Azure virtual network that acts as a central point of connectivity. The spokes are virtual networks that connect to the hub virtual network by using peering. Shared services are deployed in the hub, while individual workloads are deployed as spokes.
+
+- To provide isolation within a virtual network, you segment it into one or more subnets, and give a portion of the virtual network's address space to each subnet.
+
+- Azure adds a DNS server by default when you deploy a virtual network. You can use this server to rapidly build virtual networks and deploy resources.
+
+- DNS servers in a virtual network can forward DNS queries to the recursive resolvers in Azure. This forwarding enables you to resolve host names within that virtual network.
+
+- DNS forwarding allows VMs to see both your on-premises resources (via the domain controller) and Azure-provided host names (using the forwarder). You can access the recursive resolvers in Azure by using the virtual IP address 168.63.129.16.
+
+- DNS forwarding also enables DNS resolution between virtual networks, and allows on-premises machines to resolve host names provided by Azure.
+
+- A VPN gateway is a specific type of virtual network gateway. It sends encrypted traffic between an Azure virtual network and an on-premises location over the public internet.
+
+- A VPN gateway can also send encrypted traffic between virtual networks in Azure over the Microsoft network. Each virtual network can have only one VPN gateway.
+
+
+
+
+
 ### Task 8:  Migrating VMware VMs to Azure (Read only)
 
 Azure Migrate is a free tool from Microsoft that allows VMware administrators to replicate their VMs from on-prem to Azure. It’s an extremely powerful tool that even allows for pre-migration tests to run.
@@ -658,7 +696,7 @@ Azure Migrate has two migrations options:
 
 - you can simultaneously replicate a maximum of 500 VMs across multiple vCenter Servers (discovered from one appliance) using a scale-out appliance.
 
-- If you are interested in learning more about the Agentless migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware)
+- If you are interested in learning more about the Agentless migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware).
 
 #### Agent-based migration: 
 
@@ -666,7 +704,7 @@ Azure Migrate has two migrations options:
 
 - you can scale out the replication appliance to replicate large numbers of VMs.
 
-- If you are interested in learning more about the Agent-based migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware-agent)
+- If you are interested in learning more about the Agent-based migration, you can [read more here](https://docs.microsoft.com/en-us/azure/migrate/tutorial-migrate-vmware-agent).
 
 In the portal, you can select up to 10 machines at once for replication. To replicate more machines, add in batches of 10.
 
